@@ -21,8 +21,6 @@
 # Fifth Floor, Boston, MA  02110-1301  USA
 
 ts="@abs_top_srcdir@"
-tscm=`cd "$ts/src" ; pwd`
-export tscm
 
 PGDATABASE='guile_pg_test'
 export PGDATABASE
