@@ -1,3 +1,12 @@
+2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Don't "manually load" anything.
+
+	* meta.scm: Don't ‘manually-load’ any Guile-PG modules.
+	* types-table.scm: Likewise.
+	* testing.scm (manually-load): Delete proc.
+	* runtest.in (tscm): Delete var.
+
 2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[maint] Instantiate test/show-platform at configure-time.
